<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_folder"
        android:icon="@drawable/folder"
        android:title="@string/title_folder" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_messenger"
        android:icon="@drawable/messenger"
        android:title="@string/title_messenger" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user"
        android:title="@string/title_user" />

</menu>